--- a/default.cfg
+++ b/default.cfg
@@ -1,11 +1,12 @@
 [data]
-train_s2t = ./scp/SM1_unpara_nop/train.scp
+source_scp = ./scp/SM1_unpara_nop/train.scp
+target_scp = ./scp/SM1_unpara_nop/train.scp
 
 
 [arch]
-num_hidden = 256
+
 
 
 [train]
-batch_size = 5
+
 
