--- a/default.cfg
+++ b/default.cfg
@@ -1,12 +1,20 @@
 [data]
-source_scp = ./scp/SM1_unpara_nop/train.scp
-target_scp = ./scp/SM1_unpara_nop/train.scp
+source_speaker = SM1
+target_speaker = TM3
+train_source_scp = ./scp/SM1_unpara_nop/train.scp
+train_target_scp = ./scp/SM1_unpara_nop/train.scp
+feat_dim = 24
 
 
 [arch]
 
 
-
 [train]
-
-
+segment_length = 128
+num_iteration = 1000
+G_learning_rate = 0.0002
+D_learning_rate = 0.0001
+momentum = 0.5
+lambda_cyc = 10
+lambda_id  = 5
+show_loss_every = 200
