--- a/default.cfg
+++ b/default.cfg
@@ -1,8 +1,8 @@
 [data]
 source_speaker = SM1
 target_speaker = TM3
-train_source_scp = ./scp/SM1_unpara_nop/train.scp
-train_target_scp = ./scp/SM1_unpara_nop/train.scp
+train_source_scp = ./testing_scp/SF1.scp
+train_target_scp = ./testing_scp/SF1.scp
 feat_dim = 24
 
 
@@ -17,4 +17,4 @@ D_learning_rate = 0.0001
 momentum = 0.5
 lambda_cyc = 10
 lambda_id  = 5
-show_loss_every = 200
+show_loss_every = 1
