--- a/default.cfg
+++ b/default.cfg
@@ -1,20 +1,27 @@
 [data]
-source_speaker = SM1
-target_speaker = TM3
-train_source_scp = ./testing_scp/SF1.scp
-train_target_scp = ./testing_scp/SF1.scp
+source_speaker = SF1
+target_speaker = TF2
+train_source_scp = ./scp/SF1.scp
+train_target_scp = ./scp/TF2.scp
+source_gv = ./norm/SF1.25.norm
+target_gv = ./norm/TF2.25.norm
 feat_dim = 24
 
 
-[arch]
+[test]
+test_source_scp = ./scp/test_SF1.scp
+test_target_scp = ./scp/test_TF2.scp
+G_A_check_iter = 590000
+G_B_check_iter = 590000
 
 
 [train]
 segment_length = 128
-num_iteration = 1000
+num_iteration = 400000
 G_learning_rate = 0.0002
 D_learning_rate = 0.0001
 momentum = 0.5
 lambda_cyc = 10
 lambda_id  = 5
-show_loss_every = 20
+show_loss_every = 10000
+context = gpu0
