--- a/default.cfg
+++ b/default.cfg
@@ -1,18 +1,18 @@
 [data]
-source_speaker = SF1
-target_speaker = TF2
-train_source_scp = ./scp/SF1.scp
-train_target_scp = ./scp/TF2.scp
-source_gv = ./norm/SF1.25.norm
-target_gv = ./norm/TF2.25.norm
+source_speaker = sspkr
+target_speaker = tspkr
+train_source_scp = ./scp/sspkr.demo.scp
+train_target_scp = ./scp/tspkr.demo.scp
+source_gv = ./norm/sspkr.25.norm
+target_gv = ./norm/tspkr.25.norm
 feat_dim = 24
 
 
 [test]
-test_source_scp = ./scp/test_SF1.scp
-test_target_scp = ./scp/test_TF2.scp
-G_A_check_iter = 590000
-G_B_check_iter = 590000
+test_source_scp = ./scp/test_sspkr.demo.scp
+test_target_scp = ./scp/test_tspkr.demo.scp
+G_A_check_iter = 400000
+G_B_check_iter = 400000
 
 
 [train]
